--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Projesi</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vero est
+      modi laudantium quos minima voluptatum harum molestias eligendi? Amet
+      obcaecati, perferendis adipisci deleniti at possimus corrupti nemo eius
+      nulla?
+    </p>
+  </body>
 </html>
